--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,14 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditTextPreference
+    <ListPreference
         android:title="@string/pref_location_label"
         android:key="@string/pref_location_key"
         android:defaultValue="@string/pref_location_default"
-        android:inputType="text"
-        android:singleLine="true" />
+        android:entries="@array/pref_location_options"
+        android:entryValues="@array/pref_location_values"/>
 
     <CheckBoxPreference
         android:title="@string/pref_enable_notifications_label"
